<resources>
    <string name="app_name">糖質カウンター 😨</string>
    <string name="rice">🍚 炭水化物のご飯（米・パンなど）🍞</string>
    <string name="snack">🍩 お菓子・砂糖 🍪</string>
    <string name="juice">🍹 ジュース・ビールなど 🍺</string>
    <string name="count_unit">回</string>
    <string name="initial_count">0</string>
    <string name="total">合計</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="widget_name">糖質カウンター</string>
    <string name="widget_rice">🍚🍞</string>
    <string name="widget_snack">🍩🍪</string>
    <string name="widget_juice">🍹🍺</string>
</resources>
