<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hotatekaoru.carbscounter.MainActivity">

        <TextView
            android:id="@+id/total_label"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@id/linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/total_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/initial_count"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/count_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/count_unit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                android:gravity="end">

                <View
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:width="30dp"
                    android:gravity="center"
                    android:text="@string/initial_count" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/CarbsButton"
                    android:layout_width="match_parent"
                    android:onClick="onRicePressed"
                    android:text="@string/rice" />

                <TextView
                    android:id="@+id/rice_count"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:width="30dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:text="@string/initial_count" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                android:gravity="end">

                <View
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:width="30dp"
                    android:gravity="center"
                    android:text="@string/initial_count" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/CarbsButton"
                    android:onClick="onSnackPressed"
                    android:text="@string/snack" />

                <TextView
                    android:id="@+id/snack_count"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:width="30dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/initial_count" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                android:gravity="end">

                <View
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:width="30dp"
                    android:gravity="center"
                    android:text="@string/initial_count" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/CarbsButton"
                    android:onClick="onJuicePressed"
                    android:text="@string/juice" />

                <TextView
                    android:id="@+id/juice_count"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:width="30dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/initial_count" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
